changing entries storage